[gd_scene load_steps=22 format=3 uid="uid://bt65aclptn833"]

[ext_resource type="Script" uid="uid://b2qex1cds8mny" path="res://Fish_character.gd" id="1_yyi0c"]
[ext_resource type="Texture2D" uid="uid://dc36yvufy13ow" path="res://Marine Asssets/128x256-RAPIDPUNCHES-FEB2021-3.png" id="2_7x3pk"]
[ext_resource type="Script" uid="uid://pcqkl5er6ke8" path="res://actionable.gd" id="3_5xn7l"]
[ext_resource type="AudioStream" uid="uid://d0ysmosawdmd" path="res://Game Music/Game Music/350899__cabled_mess__jump_c_09.wav" id="4_dkqir"]
[ext_resource type="AudioStream" uid="uid://b5nnrioq1iqtq" path="res://Game Music/Game Music/391666__jeckkech__swim.wav" id="5_x36ao"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vegji"]
radius = 18.0
height = 36.0

[sub_resource type="AtlasTexture" id="AtlasTexture_63h3n"]
atlas = ExtResource("2_7x3pk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6if3"]
atlas = ExtResource("2_7x3pk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2sgn"]
atlas = ExtResource("2_7x3pk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00dyr"]
atlas = ExtResource("2_7x3pk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxx8e"]
atlas = ExtResource("2_7x3pk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcc0"]
atlas = ExtResource("2_7x3pk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ihnyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63h3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6if3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2sgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00dyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxx8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcc0")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7hvon"]
resource_name = "Idle"
length = 0.45
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_2ibjc"]
resource_name = "Jump"

[sub_resource type="Animation" id="Animation_5ofdf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i5r5q"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gey5x"]
_data = {
&"Idle": SubResource("Animation_7hvon"),
&"Jump": SubResource("Animation_2ibjc"),
&"RESET": SubResource("Animation_5ofdf"),
&"Run": SubResource("Animation_i5r5q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y25f3"]
size = Vector2(32, 21)

[sub_resource type="CircleShape2D" id="CircleShape2D_1ods1"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_ctrbl"]
radius = 15.0333

[node name="Fish" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_yyi0c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 3)
shape = SubResource("CapsuleShape2D_vegji")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ihnyo")
animation = &"Idle"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 1)
zoom = Vector2(1.6, 1.6)
limit_left = 0
limit_top = 0
limit_bottom = 1000000

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gey5x")
}
autoplay = "Run"

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, 4)
shape = SubResource("RectangleShape2D_y25f3")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(4, 3)
shape = SubResource("CircleShape2D_1ods1")

[node name="Direction" type="Marker2D" parent="."]
position = Vector2(2, -1)

[node name="Actionable_Finder" type="Area2D" parent="Direction"]
position = Vector2(4, 2)
collision_layer = 0
collision_mask = 16
script = ExtResource("3_5xn7l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/Actionable_Finder"]
position = Vector2(26, 4)
shape = SubResource("CircleShape2D_ctrbl")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dkqir")
volume_db = 5.0

[node name="Swim_Movements" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x36ao")
volume_db = -20.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
